--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -214,11 +214,12 @@ button {
 .file {
 	font-weight: normal;
 	font-size: unset;
-	display: grid;
+	display: inline-grid;
 	gap: 1em;
 	grid-auto-flow: column;
 	justify-content: center;
 	align-items: center;
+	width: auto;
 
 	.file-icon,
 	.file-size {
